--- a/package.json
+++ b/package.json
@@ -1,24 +1,44 @@
 {
-  "name":        "hosted-hubot",
-  "version":     "0.2.0",
-  "author":      "GitHub Inc.",
-  "keywords":    "github hubot campfire bot",
-  "description": "A simple helpful Robot for your Company",
+  "name":        "hubot-scripts",
+  "version":     "2.0.4",
+  "author":      "hubot",
+  "keywords":    "hubot plugin scripts campfire bot robot",
+  "description": "Allows you to opt in to a variety of scripts",
   "licenses":     [{
     "type":       "MIT",
-    "url":        "http://github.com/github/hubot/raw/master/LICENSE"
+    "url":        "http://github.com/github/hubot-scripts/raw/master/LICENSE"
   }],
 
   "repository" : {
     "type" : "git",
-    "url" : "http://github.com/github/hubot.git"
+    "url" : "https://github.com/github/hubot-scripts.git"
   },
 
   "dependencies": {
-    "hubot": "2.0.5",
-    "hubot-scripts": "2.0.2",
+    "hubot": ">= 2.0.4",
     "optparse": "1.0.3",
-    "xml2js": "0.1.13"
-  }
-}
+    "redis": "0.6.7",
+    "jsdom": "==0.2.0",
+    "xml2js": "0.1.x",
+    "soupselect": "0.2.0",
+    "htmlparser": "1.7.x",
+    "sprintf": "0.1.1",
+    "wwwdude": "0.1.0",
+    "pypi": "0.1.0",
+    "underscore": ">= 1.2.1",
+    "underscore.string": ">= 1.1.6",
+    "cradle": "0.5.7",
+    "clark": ">= 0.0.3",
+    "bang": "0.2.x",
+    "shellwords": "0.0.x",
+    "nodepie": "0.4.0",
+    "mailer": "0.6.7",
+    "scribe-node": "0.0.24",
+    "sandbox": "0.8.2"
+  },
 
+  "directories":  {
+    "lib": "./src"
+  },
+  "engine": "node >= 0.4.1"
+}
