--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "scribe-node": "0.0.24",
     "sandbox": "0.8.2",
     "wolfram": "0.1.1",
-    "date-utils": "1.2.5"
+    "date-utils": ">= 1.2.5"
   },
 
   "directories":  {
