Force specific versions of Node.js and NPM

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "lib": "./src"
   },
   "engines": {
-    "node": "0.6.x",
-    "npm":  "1.0.x"  
+    "node": "0.6.17",
+    "npm":  "1.0.106"  
   }
 }
