--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "scribe-node": "0.0.24",
     "sandbox": "0.8.2",
     "date-utils": ">= 1.2.5",
-    "node-trello": "0.1.2"
+    "node-trello": "0.1.2",
+    "scraper": "0.0.9",
+    "githubot": "0.2.0"
   },
 
   "directories":  {
