--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "sandbox": "0.8.2",
     "date-utils": ">= 1.2.5",
     "node-trello": "0.1.2",
-    "scraper": "0.0.9",
-    "githubot": "0.2.0"
+    "scraper": "0.0.9"
   },
 
   "directories":  {
